Updated photos for bridesmaids. Corrected Amy's future lastname. Reorganized sections. Added accomodations section. Updated map with parking garage marker. Updated directions section with note about where to park.

--- a/index.html
+++ b/index.html
@@ -84,14 +84,16 @@
 							<li class="nav-item">
 								<a class="nav-link" href="#event">Event</a>
 							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="#directions">Directions</a>
 							</li>
 								<a class="nav-link" href="#people">People</a>
 							</li>
 							<li class="nav-item">
 								<a class="nav-link" href="#portfolio">Portfolio</a>
 							</li>
+							<li>
+								<a class="nav-link" href="#accommodations">Accommodations</a>
+							<li class="nav-item">
+								<a class="nav-link" href="#directions">Directions</a>
 							<li class="nav-item">
 								<a class="nav-link" href="#gift">Gift</a>
 							</li>
@@ -176,25 +178,6 @@
 		</section>
 		<!-- Event Section End -->
 
-		<!-- Google Map Full Width Section -->
-		<section id="directions">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-12 text-center">
-					<div class="big-head-wrap">
-					</div>
-					<h2 class="big-heading mt-0 mt-0">
-						Directions
-					</h2>
-					<img class="headline_1" src="img/headline_simple.svg" alt="">
-					<p class="sub-heading"> 1300 H St, Sacramento, CA 95814 </p>
-					<a href="https://goo.gl/maps/n4iv1RbuSu22" class="button-link margin-b-2"> Navigate me there </a>
-				</div>
-			</div>
-		<div id="map"></div>
-		</section>
-
-
 		<!-- People Section -->
 		<section id="people">
 			<div class="container">
@@ -230,7 +213,7 @@
 						</div>
 						<div class="people-img text-center">
 							<img class="" src="img/people_amy.jpg" alt="">
-							<p>Amy Morenda</p>
+							<p>Amy Merenda</p>
 						</div>
 						<div class="people-img text-center">
 							<img class="" src="img/people_sierra.jpg" alt="">
@@ -471,6 +454,80 @@
 		</section>
 		<!-- Portfolio Section End -->
 
+		<!-- Accommodations Section -->
+		<section id="accommodations">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-12 text-center">
+						<div class="big-head-wrap">
+						</div>
+						<h2 class="big-heading mt-0 mt-0">
+							Accommodations
+						</h2>
+						<img class="headline_1" src="img/headline_simple.svg" alt="">
+						<p class="sub-heading"> After the party, flop into one of these sweet digs. </p>
+						<div class="row">
+							<div class="col-md-6 pr-70 text-right order-1 main-order-xs-1 main-order-sm-1">
+								<h4 class="font-weight-light mt-0">The Sterling</h4>
+								<p class="">You started the night here, might as well end it here! Here's a quote from their website to convince you to stay here:</p>
+								<p class=""> "An evening in one of the mansion’s spacious rooms offers you the ambiance of the Victorian era, while pampering you with a luxurious modern comfort.
+									Upon wakening, we invite you to join us for a cup of coffee, grab the award-winning Sacramento Bee and enjoy your complimentary continental breakfast in our lovely morning nook."</p>
+								<p class="">That sounds nice, don't you think?</p>
+								<p class="">Room availability is limited at the Sterling, so if you can't snag a room there check out The Sheraton.</p>
+							</div>
+							<div class="col-md-6 pl-70 text-left order-2 main-order-xs-2 main-order-sm-2 margin-sm-b-2">
+								<h4 class="font-weight-light mt-0">The Sheraton</h4>
+								<p class="">Just down the street and just as high class. Here's a snippet from their wesbite:</p>
+								<p class="">"Located inside the beautifully restored Public Market Building. Recharge in our modern hotel rooms and suites which offer amenities like flat-screen TVs, large bathrooms, ample desks, Wi-Fi and Sheraton Signature Sleep Experience™ beds."</p>
+								<p class="">Ooooooh, their beds have a trademark!</p>
+								<p class="">This is where the Bride and Groom (Hey that's me!) will be staying as we've got the Honeymoon suite! Woop Woop!</p>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-md-6 pl-70 text-right order-2 main-order-xs-2 main-order-sm-2 margin-sm-b-2">
+								<div class="hotel-img text-center">
+									<p class="margin-b-2"><img class="" src="img/sterling.jpg" alt="Photo of Sterling Hotel"</p>
+									<div>
+										<a href="http://sterlinghotelsacramento.com/accommodations/#rooms" class="button-link"> Book at the Sterling </a>
+									</div>
+								</div>
+							</div>
+							<div class="col-md-6 pl-70 text-left order-4 main-order-xs-4 main-order-sm-4 margin-sm-b-2">
+								<div class="hotel-img text-center">
+									<p class="margin-b-2"><img class="" src="img/sheraton.jpg" alt="Photo of Sheraton Hotel"</p>
+									<div>
+										<a href="https://www.marriott.com/hotels/travel/sacsi-sheraton-grand-sacramento-hotel/" class="button-link"> Book at the Sheraton </a>
+									</div>
+							</div>
+						</div>
+					</div>
+				</div>
+		</section>
+		<!-- Accommodations Section End -->
+
+		<!-- Google Map Full Width Section -->
+		<section id="directions">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-12 text-center">
+						<div class="big-head-wrap">
+						</div>
+						<h2 class="big-heading mt-0 mt-0">
+							Directions
+						</h2>
+						<img class="headline_1" src="img/headline_simple.svg" alt="">
+						<p class="sub-heading"> 1300 H St, Sacramento, CA 95814 </p>
+						<a href="https://goo.gl/maps/n4iv1RbuSu22" class="button-link margin-b-2"> Navigate me there </a>
+					</div>
+				</div>
+			</div>
+			<div id="map"></div>
+			<div class="col-lg-12 text-center">
+				<div class="headline_1">
+				</div>
+				<p class="sub-heading">For parking please use the Memorial Parking Garage, located at 14th and H street.</p>
+			</div>
+		</section>
 
 		<!-- Gift Section -->
 		<section id="gift">
@@ -506,9 +563,10 @@
 						<span class="custom-color">R</span>SVP
 					</h2>
 					<img class="headline_1" src="img/headline_simple.svg" alt="">
-					<p class="sub-heading col-lg-8 offset-lg-2 margin-b-5">Please use this form to RSVP for our Wedding. You also be able to select your food options. Only submit your RSVP once. If you need to change anything please contact us. </p>
+					<p class="sub-heading col-lg-8 offset-lg-2 margin-b-5">Please come back and use this section to RSVP for our Wedding once the invites have been mailed. This section will not be available until then.</p>
 				</div>
 			</div>
+			<!-- Commented out form due for replacement once invites are sent
 				<div class="row">
 					<div class="form-success col-md-12 text-center">
 						<h2 class=" section-heading mt-0 mb-04"><span class="custom-color">Thank</span> You!</h2>
@@ -568,6 +626,7 @@
 						</div>
 					</form>
 				</div>
+			-->
 			</div>
 			<div class="img-overlay"></div>
 		</footer>
@@ -857,13 +916,12 @@
 			}
 
 			// Add the markers to the Map
+			// Add Sterling
 			addMarker({
 				coordinate:{lat: 38.580970, lng: -121.488130},
 				infowindow:'<div id="content">'+
-	            '<h4 class="font-weight-light"><span class="custom-color">First</span> Point</h4>'+
-	            '<div class="map-info-content">'+
-	            '<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam, vitae, minima blanditiis inventore ea eum?</p>'+
-	            '</div>'+
+	            '<h4 class="font-weight-light"><span class="custom-color">The</span> Sterling</h4>'+
+
 	            '</div>',
 				icon: "img/map_marker.png",
 
@@ -871,13 +929,20 @@
 
 			});
 
+			// Add Sheraton
 			addMarker({
 				coordinate:{lat: 38.579010, lng: -121.489906},
 				infowindow:'<div id="content">'+
-	            '<h4 class="font-weight-light"><span class="custom-color">Second</span> Point</h4>'+
-	            '<div class="map-info-content">'+
-	            '<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam, vitae, minima blanditiis inventore ea eum?</p>'+
-	            '</div>'+
+	            '<h4 class="font-weight-light"><span class="custom-color">The</span> Sheraton</h4>'+
+	            '</div>',
+				icon: "img/map_marker.png",
+			});
+
+			// Add Parking
+			addMarker({
+				coordinate:{lat: 38.5807078, lng: -121.4866931},
+				infowindow:'<div id="content">'+
+	            '<h4 class="font-weight-light">Parking Garage</h4>'+
 	            '</div>',
 				icon: "img/map_marker.png",
 			});
