Changed Wedding to Wedding of

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 				<div class="container relative-z">
 					<div class="row">
 						<div class="col col-lg-12 align-self-center">
-							<h1><span class="custom-color">W</span>edding</h1>
+							<h1><span class="custom-color">W</span>edding of</h1>
 							<div class="slider-text-holder">
 								<h2>Cortney and Adam</h2>
 								<p>1. 1. 2020</p>
