added social media thumbnail

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<meta name="keywords" content="Cortney, Adam, Ceccato, Strautman, Wedding, Sterling, 2019, January" />
 		<meta name="description" content="Adam and Cortney Wedding Website">
 		<meta name="author" content="Adam Strautman">
+		<meta property="og:image" content="https://cortneyandadam.com/img/portfolio_6.jpg" />
 
 		<!-- Page Title -->
 		<title>Cortney and Adam</title>
