Added Thumbnail specific image and added more meta properties.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
 		<meta name="keywords" content="Cortney, Adam, Ceccato, Strautman, Wedding, Sterling, 2019, January" />
 		<meta name="description" content="Adam and Cortney Wedding Website">
 		<meta name="author" content="Adam Strautman">
-		<meta property="og:image" content="https://cortneyandadam.com/img/portfolio_6.jpg" />
+		<!--FACEBOOK-->
+    <meta property="og:image" content="https://cortneyandadam.com/img/thumbnail.jpg">
+    <meta property="og:image:type" content="image/jpg">
+    <meta property="og:image:width" content="600">
+    <meta property="og:image:height" content="600">
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.cortneyandadam.com/"/>
+    <meta property="og:title" content="Wedding of Cortney and Adam" />
+    <meta property="og:description" content="1920s style celebration of the Wedding between Cortney Ceccato and Adam Strautman." />
 
 		<!-- Page Title -->
 		<title>Cortney and Adam</title>
