changed thumbnail image again

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<meta name="description" content="Adam and Cortney Wedding Website">
 		<meta name="author" content="Adam Strautman">
 		<!--FACEBOOK-->
-    <meta property="og:image" content="https://cortneyandadam.com/img/thumbnail.jpg">
+    <meta property="og:image" content="https://cortneyandadam.com/img/portfolio_6.jpg">
     <meta property="og:image:type" content="image/jpg">
     <meta property="og:image:width" content="600">
     <meta property="og:image:height" content="600">
