Added RSVP Button to landing slider page.

--- a/index.html
+++ b/index.html
@@ -58,6 +58,26 @@
 								<div class="slider-img-holder"></div>
 							</div>
 
+								<div class="contain">
+							    <p>
+							        <a href="#footer" class="roman-link">
+							            <span class="bg-large">
+							                <span class="roman-top-left"></span>
+							                <span class="roman-bottom-right"></span>
+							            </span>
+							            <span class="bg-tall">
+							                <span class="roman-top-left"></span>
+							                <span class="roman-bottom-right"></span>
+							            </span>
+							            <span class="bg-medium">
+							                <span class="roman-top-left"></span>
+							                <span class="roman-bottom-right"></span>
+							            </span>
+							            RSVP
+							        </a>
+							    </p>
+							</div>
+
 							<div class="justify-content-lg-center counter">
 								<div id="countdown"></div>
 							</div>
@@ -66,7 +86,7 @@
 					</div>
 				</div>
 				<div class="slider-scroll">
-					<a class="scroll-link" href="#about">
+					<a class="scroll-link" href="#event">
 						<i class="fa fa-angle-down fade-down"></i>
 					</a>
 				</div>
