fixed width of rsvp button container. renamed container for clarity.

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 								<div class="slider-img-holder"></div>
 							</div>
 
-								<div class="contain">
+								<div class="rsvp-button-container">
 							    <p>
 							        <a href="#footer" class="roman-link">
 							            <span class="bg-large">
