Adults only message to Details section

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 				<div class="row">
 					<div class="col-md-6 pr-70 text-right order-1 main-order-xs-1 main-order-sm-1">
 						<h4 class="font-weight-light mt-0">The Details</h4>
-						<p class="">Come in your 1920's best! Great Gatsby style baby! We're bringing this celebration back one-hundred years. All you eggs and flappers that have been invited, join us! RSVP and everything'll be jake. We'll be dipping our bill together, but pace yourself. Don't want to get zazzled right off the bat.</p>
+						<p class="">Call a sitter, leave the moppets at home and come in your 1920's best! Adults only - Great Gatsby style baby! We're bringing this celebration back one-hundred years. All you eggs and flappers that have been invited, join us! RSVP and everything'll be jake. We'll be dipping our bill together, but pace yourself. Don't want to get zazzled right off the bat.</p>
 						<p class="">Our celebration will have three parts. In each of these three parts guests are encouraged to laugh, cry, and hold hands with your personal emotional support (aka your guest). All three parts will be hosted at the same location: The Sterling Hotel.</p>
 					  <p class="margin-b-2">In the event of a raid by the coppers, drink fast.</p>
 					</div>
