fixed mispelling on bridesmaids and groomsmen

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 			</div>
 				<div class="row">
 					<div class="col col-lg-6 text-center">
-						<h4 class="margin-b-2">Bridemaids</h4>
+						<h4 class="margin-b-2">Bridesmaids</h4>
 						<div class="people-img text-center ml-0">
 							<img class="" src="img/people_jackie.jpg" alt="">
 							<p>Jackie Ceccato</p>
@@ -254,7 +254,7 @@
 						</div>
 					</div>
 					<div class="col col-lg-6 text-center">
-						<h4 class="margin-b-2">Groomsmen's</h4>
+						<h4 class="margin-b-2">Groomsmen</h4>
 						<div class="people-img text-center ml-0">
 							<img class="" src="img/people_ryan.jpg" alt="">
 							<p>Ryan Strautman</p>
