added room block code and fixed mispelled word.

--- a/index.html
+++ b/index.html
@@ -499,14 +499,14 @@
 							<div class="col-md-6 pr-70 text-right order-1 main-order-xs-1 main-order-sm-1">
 								<h4 class="font-weight-light mt-0">The Sterling</h4>
 								<p class="">You started the night here, might as well end it here! Here's a quote from their website to convince you to stay here:</p>
-								<p class=""> "An evening in one of the mansion’s spacious rooms offers you the ambiance of the Victorian era, while pampering you with a luxurious modern comfort.
-									Upon wakening, we invite you to join us for a cup of coffee, grab the award-winning Sacramento Bee and enjoy your complimentary continental breakfast in our lovely morning nook."</p>
+								<p class=""> "An evening in one of the mansion’s spacious rooms offers you the ambiance of the Victorian era, while pampering you with a luxurious modern comfort."</p>
 								<p class="">That sounds nice, don't you think?</p>
+								<p class="font-weight-bold">There is a room block for our party! Please book using passcode: CC2020.</p>
 								<p class="">Room availability is limited at the Sterling, so if you can't snag a room there check out The Sheraton.</p>
 							</div>
 							<div class="col-md-6 pl-70 text-left order-2 main-order-xs-2 main-order-sm-2 margin-sm-b-2">
 								<h4 class="font-weight-light mt-0">The Sheraton</h4>
-								<p class="">Just down the street and just as high class. Here's a snippet from their wesbite:</p>
+								<p class="">Just down the street and just as high class. Here's a snippet from their website:</p>
 								<p class="">"Located inside the beautifully restored Public Market Building. Recharge in our modern hotel rooms and suites which offer amenities like flat-screen TVs, large bathrooms, ample desks, Wi-Fi and Sheraton Signature Sleep Experience™ beds."</p>
 								<p class="">Ooooooh, their beds have a trademark!</p>
 								<p class="">This is where the Bride and Groom (Hey that's me!) will be staying as we've got the Honeymoon suite! Woop Woop!</p>
