added time to description

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 								</a>
 								<div id="collapse_1" class="panel-collapse collapse show" role="tabpanel" aria-labelledby="headingOne">
 									<div class="panel-body">
-										<p>It all begins at the Sterling Hotel in downtown Sacramento. There is no password for entry. Meet in the ballroom and get your tear-wipes ready.</p>
+										<p>It all begins at the Sterling Hotel in downtown Sacramento at 6pm. There is no password for entry. Meet in the ballroom and get your tear-wipes ready.</p>
 										</a>
 									</div>
 								</div>
